chore: update pom and module info