@@ -15,6 +15,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <junit.version>5.11.4</junit.version>
     <mockito.version>5.8.0</mockito.version>
+    <testfx.version>4.0.18</testfx.version>
   </properties>
 
   <dependencies>
@@ -23,6 +24,12 @@
       <artifactId>javafx-controls</artifactId>
       <version>23.0.1</version>
     </dependency>
+    <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.10.1</version>
+    </dependency>
+
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-api</artifactId>
@@ -48,9 +55,22 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>com.google.code.gson</groupId>
-      <artifactId>gson</artifactId>
-      <version>2.10.1</version>
+      <groupId>org.testfx</groupId>
+      <artifactId>testfx-core</artifactId>
+      <version>${testfx.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.testfx</groupId>
+      <artifactId>testfx-junit5</artifactId>
+      <version>${testfx.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.testfx</groupId>
+      <artifactId>openjfx-monocle</artifactId>
+      <version>21.0.2</version>
+      <scope>test</scope>
     </dependency>
   </dependencies>
 
@@ -69,6 +89,18 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <version>3.5.2</version>
+        <configuration>
+          <argLine>
+            --add-exports=javafx.graphics/com.sun.glass.ui=ALL-UNNAMED
+            --add-exports=javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
+            --add-opens=javafx.graphics/com.sun.glass.ui=ALL-UNNAMED
+            -Dtestfx.robot=glass
+            -Dtestfx.headless=true
+            -Dprism.order=sw
+            -Djava.awt.headless=true
+          </argLine>
+
+        </configuration>
       </plugin>
       <plugin>
         <groupId>org.openjfx</groupId>
